--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ a {
 button {
   font-family: Arial;
   background-color: #eee;
-  border: none;
+  border: 2;
   padding: 5px 10px;
   border-radius: 4px;
   cursor: pointer;
